    certificate verification.
  * requestbackport:
    - Check for existing backport bugs first.
    - Check that there are published binaries (i.e. not stuck in bin-NEW).
  * pull-lp-source, requestbackport: Take the latest version from any
    non-backports pocket. Implemented by making lpapicache's getSourcePackage
    smarter.

 -- Stefano Rivera <stefanor@debian.org>  Mon, 21 Nov 2011 09:47:00 +0200

ubuntu-dev-tools (0.136) unstable; urgency=low

  [ Marc Deslauriers ]
  * mk-sbuild,doc/mk-sbuild.1: switch from aufs to overlayfs, as aufs is no
    longer in the Precise kernel.

  [ Stefano Rivera ]
  * mk-sbuild,doc/mk-sbuild.1: aufs may still be used if overlayfs isn't
    available (as is the case on Debian).
  * mk-sbuild: debootstrap with all components, so that eatmydata can be
    installed.
  * EditFile: Don't try and store temporary files in /usr/bin.
  * EditBugReport: Don't include a newline in the bug title.

 -- Stefano Rivera <stefanor@debian.org>  Wed, 16 Nov 2011 14:33:04 +0200

ubuntu-dev-tools (0.135) unstable; urgency=low

  * grab-merge: Use wget -nv rather than -q, so that we see error messages
    (LP: #881967)
  * requestsync: Make --lp the default.
  * submittodebian: Use prettier patch filenames (LP: #887333)
  * mk-sbuild:
    -Allow creating experimental chroots again (LP: #885499)
    - experimental shouldn't be the default in experimental chroots.
    - Add --eatmydata flag (LP: #888440)
  * pbuilder-dist:
    - Support using non-master mirrors. Thanks Mathieu Parent. (LP: #824285)
    - Enable non-release pockets by default (LP: #781003)
  * New scripts:
    - reverse-depends: Replaces reverse-build-depends. Uses an UbuntuWire
      webservice for determining all reverse(-build)-dependencies for a
      package. (LP: #696373)
    - requestbackport: Files a backport request bug report, including a full
      testing checklist.
  * Don't allow boilerplate prompts through in submittodebian and requestsync
    (LP: #887336)